really done with these first 3 posts

--- a/source/_posts/2012-10-27-phrasing.markdown
+++ b/source/_posts/2012-10-27-phrasing.markdown
@@ -1,22 +1,21 @@
 ---
 layout: post
-title: "The way you say it matters"
+title: "The Way You Say It Matters"
 date: 2012-10-27 12:44
 comments: true
 categories: 
 ---
 
-Now lets put the words back in and take a look at your phrasing. This is an often talked about topic for new parents. When a child misbehaves, it's said that you should denounce the action, yet praise the child. i.e. "she is a good kid who has done something wrong" - rather than "she is a terrible kid".
+There are a ton of books written on <a href="http://www.amazon.com/How-Talk-Kids-Will-Listen/dp/1451663889/">how to talk to children</a>. One topic I see frequently is how to properly phrase criticism. The idea is that when a child misbehaves, it's said that you should denounce the action, yet praise the child. i.e. "she is a good kid who has done something wrong" - rather than "she is a terrible kid."
 
-Now how does this relate to internal dialogue? Many people will do the opposite in their internal dialogue: "Im a lazy, unmotivated person. But today I went to the gym - I did good today". Here, this person defines himself by the negative attributes and unintentionally creates a tremendous mental hurdle. Rather one should think "I went to the gym today because I'm disciplined and dedicated to achieving my goal."
+Interestingly, anyone can apply this advice to their internal dialogue to learn what they think of themselves. For example, many people will say to themselves, "I've always been a lazy guy, but today I got a lot of work done - I did good today."
 
-You hear this kind of advice from others all the time: 
+Sounds okay, but this person actually defines himself as an unmotivated person who has happened to do something good. Alternatively, you might say "I accomplished a lot today because I'm disciplined and dedicated to achieving my goal. I may have had some setbacks but not today." Similar, but very different.
+
+Now lets look at some advice you've surely heard before:
 
 <blockquote>"There are those who think they will succeed and those who think they will fail. In the end, both are right."</blockquote>
-<blockquote>"Believe in yourself."</blockquote> 
 
-The subtlety to this advice is in the phrasing. "I am a disciplined person who goes to the gym" is a very different thought than "you will go to the gym you lazy sack of shit". Both seem like motivation, but only one works.
+This seems obvious, but it's surprisingly easy to mess this up. The subtlety to this advice is in the phrasing. "You are a disciplined person who goes to the gym" is a very different thought than "you will go to the gym you lazy bum." Both seem like motivation, but one isn't motivation at all.
 
-Start listening to yourself. To the tone, the mood, and the phrasing. Separate yourself from your internal dialogue.
-
-Only then can you start sticking to your goals.
+Start listening to your internal dialogue. To the tone, the mood, and the phrasing. Separate yourself from your inner voice and you'll learn a lot about what you think of yourself.
